force-app/main/default/objects/IDENTITY_Paths__mdt/IDENTITY_Paths__mdt.object-meta.xml
<CustomObject>
    <label>IDENTITY - Path</label>
    <pluralLabel>IDENTITY - Paths</pluralLabel>
</CustomObject>