force-app/main/default/objects/IDENTITY_Paths__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MYLV</fullName>
            </value>
            <value>
                <fullName>LVAPP</fullName>
            </value>
            <value>
                <fullName>LVCONNECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>