force-app/main/default/objects/IDENTITY_Paths__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Domain</fullName>
            </value>
            <value>
                <fullName>Autodata</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Error Path</fullName>
            </value>
            <value>
                <fullName>Forgot Password Path</fullName>
            </value>
            <value>
                <fullName>Get HTML Fragment Domain</fullName>
            </value>
            <value>
                <fullName>Get HTML Fragment Path</fullName>
            </value>
            <value>
                <fullName>Homepage</fullName>
            </value>
            <value>
                <fullName>Login Error Path</fullName>
            </value>
            <value>
                <fullName>Login Form Path</fullName>
            </value>
            <value>
                <fullName>Login Success Path</fullName>
            </value>
            <value>
                <fullName>Louis Vuitton Domain</fullName>
            </value>
            <value>
                <fullName>Louis Vuitton Secure Domain</fullName>
            </value>
            <value>
                <fullName>Louis Vuitton Secure Domain Web</fullName>
            </value>
            <value>
                <fullName>LVAPP URL Repair</fullName>
            </value>
            <value>
                <fullName>LVAPP URL Repair Email</fullName>
            </value>
            <value>
                <fullName>LVAPP URL Repair Short</fullName>
            </value>
            <value>
                <fullName>LVAPP URL Scheme</fullName>
            </value>
            <value>
                <fullName>ONLINE_APPOINTMENT</fullName>
            </value>
            <value>
                <fullName>ONLINE_APPOINTMENT_CANCEL</fullName>
            </value>
            <value>
                <fullName>ONLINE_APPOINTMENT_CANCELLED</fullName>
            </value>
            <value>
                <fullName>OSA Login-Less Cancel URL</fullName>
            </value>
            <value>
                <fullName>Overview</fullName>
            </value>
            <value>
                <fullName>Registration Callback Domain</fullName>
            </value>
            <value>
                <fullName>Registration Cancel Path</fullName>
            </value>
            <value>
                <fullName>Registration Error Path</fullName>
            </value>
            <value>
                <fullName>Registration Form Path</fullName>
            </value>
            <value>
                <fullName>Registration Success Path</fullName>
            </value>
            <value>
                <fullName>Repairs Homepage URL</fullName>
            </value>
            <value>
                <fullName>Repairs Registration URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>