force-app/main/default/objects/IDENTITY_Paths__mdt/listViews/All_Paths.listView-meta.xml
<ListView>
    <fullName>All_Paths</fullName>
    <columns>MasterLabel</columns>
    <columns>Name__c</columns>
    <columns>Value__c</columns>
    <columns>Context__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Paths</label>
    <language>en_US</language>
</ListView>