force-app/main/default/objects/IDENTITY_Paths__mdt/listViews/By_Context.listView-meta.xml
<ListView>
    <fullName>By_Context</fullName>
    <columns>MasterLabel</columns>
    <columns>Name__c</columns>
    <columns>Value__c</columns>
    <columns>Context__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Context__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>By Context</label>
    <language>en_US</language>
</ListView>