force-app/main/default/objects/IDENTITY_Paths__mdt/listViews/Default_Paths.listView-meta.xml
<ListView>
    <fullName>Default_Paths</fullName>
    <columns>MasterLabel</columns>
    <columns>Name__c</columns>
    <columns>Value__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Context__c</field>
        <operation>equals</operation>
    </filters>
    <label>Default Paths</label>
    <language>en_US</language>
</ListView>