force-app/main/default/objects/IDENTITY_Paths__mdt/listViews/LV_App_LV_Connect.listView-meta.xml
<ListView>
    <fullName>LV_App_LV_Connect</fullName>
    <columns>MasterLabel</columns>
    <columns>Name__c</columns>
    <columns>Value__c</columns>
    <columns>Context__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>LVAPP,LVCONNECT</value>
    </filters>
    <label>LV App / LV Connect</label>
    <language>en_US</language>
</ListView>